--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,37 +4,9 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
         {
             "type": "java",
-            "name": "Debug (Attach)",
-            "request": "attach",
-            "hostName": "localhost",
-            "port": 0
-        },
-        {
-            "type": "java",
-            "name": "Debug (Launch)",
-            "request": "launch",
-            "cwd": "${workspaceFolder}",
-            "console": "internalConsole",
-            "stopOnEntry": false,
-            "mainClass": "",
-            "args": ""
-        },
-        {
-            "type": "java",
-            "name": "Debug (Launch)-Puissance4",
-            "request": "launch",
-            "cwd": "${workspaceFolder}",
-            "console": "internalConsole",
-            "stopOnEntry": false,
-            "mainClass": "Puissance4",
-            "args": ""
-        },
-        {
-            "type": "java",
-            "name": "Debug (Launch)-Puissance4Test",
+            "name": "CodeLens (Launch) - Puissance4Test",
             "request": "launch",
             "cwd": "${workspaceFolder}",
             "console": "internalConsole",
